<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/cyan">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/welcome"
        android:textSize="33sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/databaseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/black"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="500dp"
        android:onClick="showDatabase"
        android:text="@string/databaseBtnText" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:backgroundTint="@color/black"

        android:layout_marginTop="350dp"
        android:layout_marginBottom="500dp"
        android:onClick="playQuiz"
        android:text="@string/playBtnText" />


</RelativeLayout>