<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatabaseActivity"
    android:background="@color/cyan">

    <TextView
        android:id="@+id/databaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/activityDatabaseText"
        android:textSize="60sp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
    />

    <ImageView
        android:id="@+id/imageViewClassmate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/databaseText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
    />



    <TextView
        android:id="@+id/arraylistText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="50dp"

        android:layout_below="@+id/imageViewClassmate"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="25dp"
    />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/black"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="500dp"
        android:text="@string/nextText"
        android:onClick="nextClassmate"
    />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/black"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:layout_marginBottom="500dp"
        android:text="@string/addclassmate"
        android:onClick="showDialogCameraOrStorage"
    />

</RelativeLayout>